修改了Java弃用的方式